# eSLIM

./: .gitmodules  LICENSE  README.md
src/: aigerIO.py  blifIO.py  clausalEncoding.py  encoderCircuits.py  encoderCircuitsExact.py  exactSynthesiser.py  reduce.py  reduceWithAbc.py  relationFromSubcircuit.py  relationSynthesiserSAT.py  specification.py  specificationManager.py  subcircuitSynthesiser.py  synthesisManager.py  synthesiser.py  utils.py  windowGenerator.py
src/bindings/: CMakeLists.txt  CadicalPython.py  cadical.h  cadical_bindings.cc  relationSynthesiser.cc  relationSynthesiser.h  relationSynthesiser_bindings.cc
